# Fed-CL-IDS

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
Baselines/: centralized_models.py
baselines/: mlp.py  mlp_baselines.yaml
data_pipeline/: cicids_preprocess.py  test.py  uavids_preprocess.py  uavids_preprocess.py.py
data_pipeline/splits/: clients.yaml  uavids_days.yaml  uavids_distribution.yaml  uavids_priors.yaml
fed/: client.py  continual_learning.py  custom_strategies.py  differential_privacy.py  fed_cl_ids_strategies.py  fedclids_strategies.py  server.py
fed_cl_ids/data_pipeline/: uavids_preprocess.py
fed_cl_ids/data_pipeline/splits/: uavids_distribution.yaml
fed_cl_ids/fed/: CustomStrategies.py  client.py  continual_learning.py  custom_strategies.py  customstrategies.py  differential_privacy.py  replay_buffer.py  replaybuffer.py  server.py
fed_cl_ids/models/: fed_metrics.py  losses.py  mlp.py
fed_cl_ids/outputs/: metrics.txt
models/: fed_metrics.py  mlp.py
outputs/: metrics.txt
