# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-cl-ids"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Frank"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fed_cl_ids.fed.server:app"
clientapp = "fed_cl_ids.fed.client:app"

# Custom config values accessible via `context.run_config`
# Example: flwr run --run-config num-server-rounds=10
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 1
local-epochs = 1
lr = 0.01
mlp-width = "256,256,128,64"
mlp-dropout = 0.2
mlp-weight-decay = 1e-4
# Days
# lr-max
# lr-min


# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes; number of clients.
# Example: flwr run --federation-config options.num-supernodes=20
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
