# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-cl-ids"
version = "1.0.0"
description = ''
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0", # Not needed maybe
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Frank"

# Point to ServerApp and ClientApp objects
[tool.flwr.app.components]
# serverapp = "fed_cl_ids.fed.server:app"
serverapp = "fed.server:app"
clientapp = "fed.client:app"

# Custom config values accessible via `context.run_config`
# Example: flwr run -c 'days=2 rounds=3'
# Flower context.config can only process str, bool, float, int, str
[tool.flwr.app.config]
fraction-train = 0.5
fraction-evaluate = 1.0
resample-nodes = false
days = 4
epochs = 2
rounds = 60
# How many recent metrics to aggregate after each day
# Also used for how many to aggregate and compare for recovery time (FedAvg)
n-aggregations = 10
batch-size = 128
proximal-mu = 0.0

mlp-widths = "256,256,128,64"
mlp-dropout = 0.2
mlp-weight-decay = 1e-4
mlp-lr-max = 1e-3
mlp-lr-min = 1e-4

cl-enabled = true
ewc-lambda = 50
er-memory = 0.005
er-mix-ratio = 0.2
n-features = 18

dp-enabled = true
clipping = 0.5
noise = 0.5
delta = 1e-5

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes; number of clients.
# Example: flwr run --federation-config options.num-supernodes=20
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # default: 2
# If float, uses % of GPU VRAM.
# If int, how many gpus to allocate per client.
options.backend.client-resources.num-gpus = 0.2

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
